separated the site into modules and changed some styles

--- a/kukkakauppa/style.css
+++ b/kukkakauppa/style.css
@@ -440,7 +440,7 @@ footer {
   text-align: center;
   padding: 5px;
   margin-top: 30px;
-  color: #f9f9f9;
+  color: #9e9e9e;
   background-color: #1c1c1c;
   font-size: 1rem;
   line-height: 0.8;
@@ -463,10 +463,6 @@ footer .flex-wrapper {
 
 .footer-block {
   width: calc(50% - 10px);
-}
-
-.footer-block p {
-  color: #e16a8b;
 }
 
 /* Responsiivisuus */
