--- a/sakila/style.css
+++ b/sakila/style.css
@@ -1,12 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Syne:wght@400..800&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Slackey&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lalezar&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Spline+Sans+Mono:ital,wght@0,300..700;1,300..700&display=swap");
 
 /* General styling */
 html,
 body {
   margin: 0px;
   background-color: #fff;
-  font-family: "Barlow", sans-serif;
+  font-family: "Spline Sans Mono", monospace;
   color: #333;
 }
 
@@ -14,9 +15,9 @@ h1,
 h2,
 h3,
 h4 {
-  font-family: "Syne", sans-serif;
+  font-family: "Lalezar", system-ui;
   font-weight: 400;
-  color: #00308f;
+  color: #1c1c1c;
 }
 
 h1 {
@@ -57,42 +58,14 @@ a:hover {
   align-items: center;
 }
 
-.center-block button {
-  display: inline-block;
-  outline: none;
-  cursor: pointer;
-  font-size: 14px;
-  line-height: 1;
-  border-radius: 500px;
-  transition-property: background-color, border-color, color, box-shadow, filter;
-  transition-duration: 0.3s;
-  border: 1px solid transparent;
-  letter-spacing: 2px;
-  min-width: 160px;
-  text-transform: uppercase;
-  white-space: normal;
-  font-weight: 700;
-  text-align: center;
-  padding: 16px 14px 18px;
-  color: #fff;
-  background-color: #00308f;
-  height: 48px;
-}
-
-.center-block button:hover {
-  background-color: #333;
-}
-
-.center-block button a {
-  color: #fff;
-}
-
-.center-block button a:hover {
-  color: #fff;
+.result {
+  color: #9e9e9e;
+  font-family: "Spline Sans Mono", monospace;
+  font-size: 1.7em;
 }
 
 .error {
-  font-family: "Barlow", sans-serif;
+  font-family: "Spline Sans Mono", monospace;
   font-weight: 400;
   color: white;
   background-color: #e57373;
@@ -149,14 +122,17 @@ a:hover {
 
 /* Nav */
 nav {
-  padding: 20px 0px;
-  background-color: #fff;
-  color: #2b2b2b;
+  padding: 15px 0px;
+  background-color: #1c1c1c;
+  font-family: "Lalezar", system-ui;
+  font-size: 1.3em;
+  font-weight: 400;
+  color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   position: fixed;
   top: 0;
   width: 100%;
-  min-height: 40px;
+  min-height: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -182,9 +158,8 @@ nav ul li {
 }
 
 nav > ul > li > a {
-  font-size: 1.1em;
+  color: #fff;
   margin: 0 10px;
-  font-weight: 500;
 }
 
 .nav-links li.active a,
@@ -198,10 +173,9 @@ nav > ul > li > a {
   overflow: hidden;
 }
 
-.dropdown .dropbtn {
-  font-size: 1.1em;
-  font-weight: 500;
-  color: #00308f;
+.dropbtn {
+  font-size: 1em;
+  color: #fff;
   border: none;
   outline: none;
   background-color: inherit;
@@ -212,22 +186,22 @@ nav > ul > li > a {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #fff;
+  background-color: #333;
   width: 190px;
+  margin-top: 15px;
   box-shadow: 0px 10px 8px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
   padding: 10px;
 }
 
 .dropdown-content a {
-  color: #00308f;
-  font-size: 1em;
-  font-weight: 500;
+  color: #fff;
+  font-size: 0.9em;
   float: none;
-  padding: 5px 10px;
+  padding: 0px 10px;
   text-decoration: none;
   display: block;
-  text-align: left;
+  text-align: center;
 }
 
 .dropdown-content > a:hover {
@@ -245,20 +219,20 @@ nav > ul > li > a {
   background-position: center;
   width: 100%;
   height: 400px;
-  margin-top: 80px;
+  margin-top: 64px;
   text-align: center;
 }
 
 .heading-wrapper {
   text-shadow: 1px 1px 2px #000, 0 0 20px #000, 0 0 5px #000;
   color: #fff;
-  padding-top: 110px;
-  font-weight: 700;
+  padding-top: 120px;
+  font-weight: 500;
 }
 
 .sakila {
-  font-size: 6em;
-  font-family: "Oswald", sans-serif;
+  font-size: 7em;
+  font-family: "Slackey", sans-serif;
   margin: 0;
 }
 
@@ -300,7 +274,7 @@ select {
   border: 1px solid #ccc;
   border-radius: 5px;
   box-sizing: border-box;
-  font-family: "Barlow", sans-serif;
+  font-family: "Spline Sans Mono", monospace;
   color: #333;
   font-size: 1em;
 }
@@ -335,95 +309,6 @@ input[type="submit"]:hover {
   background-color: #333;
 }
 
-/* News */
-.news-block {
-  width: calc(33% - 10px);
-  margin-bottom: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
-
-.news-block img {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-}
-
-.news-block > p {
-  padding: 0px 20px;
-}
-
-.news-date {
-  font-weight: bold;
-}
-
-/* Categories */
-.category-block {
-  width: calc(50% - 10px);
-  margin-bottom: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  transition: transform 0.2s;
-}
-
-.category-block:hover {
-  transform: scale(1.05);
-}
-
-.category-block > a {
-  color: #333;
-}
-
-.category-block img {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-}
-
-.category-block > a > h3 {
-  padding: 0px 20px;
-}
-
-.category-block > a > p {
-  padding: 0px 20px;
-}
-
-.img-wrapper {
-  width: 50%;
-  margin: auto;
-}
-
-.img-wrapper img {
-  width: 100%;
-}
-
-/* Stores */
-.store-wrapper {
-  background-color: #f9f9f9;
-  padding: 20px;
-  margin: 40px 0px;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-}
-
-.store-wrapper .flex-wrapper {
-  margin: 0px 0px;
-}
-
-.store-block {
-  width: calc(50% - 10px);
-}
-
-.store-block p {
-  line-height: 0.8;
-}
-
-.store-block iframe {
-  height: 400px;
-  border: 0;
-  width: 100%;
-  display: block;
-  overflow: hidden;
-}
-
 /* Footer */
 footer {
   text-align: center;
@@ -456,12 +341,6 @@ footer .flex-wrapper {
 
 /* Responsiivisuus */
 
-@media (max-width: 1425px) {
-  .news-block {
-    width: calc(50% - 10px);
-  }
-}
-
 @media (max-width: 1082px) {
   nav .menu-icon {
     display: block;
@@ -476,7 +355,7 @@ footer .flex-wrapper {
     width: 100%;
     background-color: #333;
     position: absolute;
-    top: 80px;
+    top: 60px;
     left: 0;
     z-index: 1000;
   }
@@ -487,7 +366,7 @@ footer .flex-wrapper {
 
   nav ul li {
     text-align: center;
-    margin: 10px 0;
+    margin: 5px 0;
   }
 
   .nav-links a {
@@ -506,6 +385,9 @@ footer .flex-wrapper {
     position: relative;
     width: 100%;
     background-color: #444;
+    padding: 3px 0px;
+    margin-top: 0px;
+    font-size: 0.9em;
   }
 
   .dropdown-content a {
@@ -516,16 +398,8 @@ footer .flex-wrapper {
     color: #fff;
   }
 
-  .img-wrapper {
-    width: 100%;
-  }
-
-  .store-block {
-    width: 100%;
-  }
-
-  .inner-block {
-    width: 100%;
+  .banner-wrapper {
+    margin-top: 60px;
   }
 
   .footer-wrapper {
@@ -534,24 +408,12 @@ footer .flex-wrapper {
 }
 
 @media (max-width: 660px) {
-  .news-block {
-    width: 100%;
-  }
-
-  .category-block {
-    width: 100%;
-  }
-
   .footer-block {
     width: 100%;
   }
 
   h3 {
     line-height: 1;
-  }
-
-  .store-block p {
-    line-height: 1.1;
   }
 
   .sakila {
