--- a/sakila/style.css
+++ b/sakila/style.css
@@ -122,7 +122,6 @@ a:hover {
 
 /* Nav */
 nav {
-  padding: 15px 0px;
   background-color: #1c1c1c;
   font-family: "Lalezar", system-ui;
   font-size: 1.3em;
@@ -132,7 +131,6 @@ nav {
   position: fixed;
   top: 0;
   width: 100%;
-  min-height: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -155,6 +153,7 @@ nav ul {
 
 nav ul li {
   margin: 0 15px;
+  padding-top: 15px;
 }
 
 nav > ul > li > a {
@@ -181,6 +180,7 @@ nav > ul > li > a {
   background-color: inherit;
   font-family: inherit;
   margin: 0;
+  padding-bottom: 15px;
 }
 
 .dropdown-content {
@@ -188,7 +188,6 @@ nav > ul > li > a {
   position: absolute;
   background-color: #333;
   width: 190px;
-  margin-top: 15px;
   box-shadow: 0px 10px 8px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
   padding: 10px;
@@ -219,7 +218,7 @@ nav > ul > li > a {
   background-position: center;
   width: 100%;
   height: 400px;
-  margin-top: 64px;
+  margin-top: 63px;
   text-align: center;
 }
 
@@ -264,7 +263,7 @@ label {
 }
 
 input[type="text"],
-input[type="email"],
+input[type="number"],
 input[type="password"],
 textarea,
 select {
@@ -342,6 +341,11 @@ footer .flex-wrapper {
 /* Responsiivisuus */
 
 @media (max-width: 1082px) {
+  nav {
+    padding: 15px 0px;
+    min-height: 30px;
+  }
+
   nav .menu-icon {
     display: block;
     font-size: 3em;
@@ -367,6 +371,7 @@ footer .flex-wrapper {
   nav ul li {
     text-align: center;
     margin: 5px 0;
+    padding-top: 0px;
   }
 
   .nav-links a {
@@ -379,15 +384,16 @@ footer .flex-wrapper {
 
   .dropdown .dropbtn {
     color: #7cb9e8;
+    padding-bottom: 0px;
   }
 
   .dropdown-content {
     position: relative;
     width: 100%;
     background-color: #444;
-    padding: 3px 0px;
+    padding: 5px 0px;
     margin-top: 0px;
-    font-size: 0.9em;
+    font-size: 1em;
   }
 
   .dropdown-content a {
