--- a/sakila/style.css
+++ b/sakila/style.css
@@ -41,7 +41,7 @@ a {
 }
 
 a:hover {
-  color: #7cb9e8;
+  color: #d2a516;
 }
 
 .container {
@@ -60,6 +60,18 @@ a:hover {
 
 .result {
   color: #9e9e9e;
+  font-family: "Spline Sans Mono", monospace;
+  font-size: 1.7em;
+}
+
+.success {
+  color: #17b169;
+  font-family: "Spline Sans Mono", monospace;
+  font-size: 1.7em;
+}
+
+.failure {
+  color: #e57373;
   font-family: "Spline Sans Mono", monospace;
   font-size: 1.7em;
 }
@@ -204,7 +216,7 @@ nav > ul > li > a {
 }
 
 .dropdown-content > a:hover {
-  color: #7cb9e8;
+  color: #d2a516;
 }
 
 .dropdown:hover .dropdown-content {
@@ -250,7 +262,7 @@ fieldset {
 legend {
   font-weight: bold;
   padding: 0 10px;
-  color: #00308f;
+  color: #1c1c1c;
   font-size: 1.5em;
 }
 
@@ -300,7 +312,7 @@ input[type="submit"] {
   text-align: center;
   padding: 16px 14px 18px;
   color: #fff;
-  background-color: #00308f;
+  background-color: #d2a516;
   height: 48px;
 }
 
@@ -375,15 +387,15 @@ footer .flex-wrapper {
   }
 
   .nav-links a {
-    color: #7cb9e8;
-  }
-
-  nav > ul > li > a:hover {
     color: #fff;
   }
 
+  nav > ul > li > a:hover {
+    color: #d2a516;
+  }
+
   .dropdown .dropbtn {
-    color: #7cb9e8;
+    color: #fff;
     padding-bottom: 0px;
   }
 
@@ -401,7 +413,7 @@ footer .flex-wrapper {
   }
 
   .dropdown-content > a:hover {
-    color: #fff;
+    color: #d2a516;
   }
 
   .banner-wrapper {
