--- a/kukkakauppa/style.css
+++ b/kukkakauppa/style.css
@@ -41,6 +41,11 @@ a:hover {
   color: #2b2b2b;
 }
 
+.big-text {
+  font-size: 1.2em;
+  font-weight: 600;
+}
+
 .container {
   width: 70%;
   max-width: 1200px;
@@ -194,7 +199,9 @@ nav > ul > li > a {
   font-weight: 500;
 }
 
-.nav-links li.active a, .dropdown.active .dropbtn a, .dropdown-content a.active {
+.nav-links li.active a,
+.dropdown.active .dropbtn a,
+.dropdown-content a.active {
   color: #9e9e9e;
 }
 
@@ -447,7 +454,7 @@ footer {
 }
 
 footer .flex-wrapper {
-  margin: 0
+  margin: 0;
 }
 
 .footer-wrapper {
