--- a/neilikka/style.css
+++ b/neilikka/style.css
@@ -96,9 +96,12 @@ a:hover {
 
 .error {
   font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  color: white;
-  background-color: #e57373;
+  font-weight: 600;
+  color: #d44d4d;
+}
+
+.profile-image {
+  width: 500px;
 }
 
 /* Flex styling */
@@ -152,27 +155,45 @@ a:hover {
 
 /* Nav */
 nav {
-  padding: 20px 0px;
+  padding: 13px 0px;
   background-color: #fff;
   color: #2b2b2b;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.2);
   position: fixed;
   top: 0;
   width: 100%;
-  min-height: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   z-index: 2;
+}
+
+.menu-wrapper {
+  max-width: 1200px;
+  margin: auto;
+}
+
+.user-nav-links {
+  font-size: 0.8em;
+  color: #333;
+  justify-content: right;
+  align-items: right;
+}
+
+.user-nav-links a {
+  color: #333;
+}
+
+.nav-links {
+  margin-top: 5px;
+  justify-content: right;
+  align-items: right;
 }
 
 .logo {
   position: absolute;
-  left: 20px;
+  margin-left: 20px;
 }
 
 nav .logo img {
-  height: 60px;
+  height: 52px;
 }
 
 nav .menu-icon {
@@ -193,16 +214,25 @@ nav ul li {
   margin: 0 15px;
 }
 
-nav > ul > li > a {
+nav > .menu-wrapper > ul > li > a {
   font-size: 1.1em;
-  margin: 0 10px;
+  margin: 0 5px;
   font-weight: 500;
+}
+
+nav > .menu-wrapper > ul > li > a:hover {
+  color: #333;
 }
 
 .nav-links li.active a,
 .dropdown.active .dropbtn a,
 .dropdown-content a.active {
   color: #9e9e9e;
+}
+
+nav > .menu-wrapper > .user-nav-links > li > i {
+  color: #333;
+  font-size: 1.2em;
 }
 
 /* Dropdown */
@@ -218,6 +248,10 @@ nav > ul > li > a {
   background-color: inherit;
   font-family: inherit;
   margin: 0;
+}
+
+.dropdown .dropbtn a:hover {
+  color: #333;
 }
 
 .dropdown-content {
@@ -500,13 +534,13 @@ footer .flex-wrapper {
   .news-block {
     width: calc(50% - 10px);
   }
-
-  nav {
-    justify-content: right;
-  }
 }
 
 @media (max-width: 1082px) {
+  nav {
+    min-height: 55px;
+  }
+
   nav .menu-icon {
     display: block;
     font-size: 3em;
@@ -520,7 +554,7 @@ footer .flex-wrapper {
     width: 100%;
     background-color: #333;
     position: absolute;
-    top: 80px;
+    top: 75px;
     left: 0;
     z-index: 1000;
   }
@@ -532,9 +566,10 @@ footer .flex-wrapper {
   nav ul li {
     text-align: center;
     margin: 10px 0;
+    width: 100%;
   }
 
-  nav > ul > li > a:hover {
+  nav > .menu-wrapper > ul > li > a:hover {
     color: #fff;
   }
 
